# reversible-stackmachine

./: .gitignore  README.md  build.sh
examples/: collatz.rsc  euler.rsc  factorial.rsc  polymorph.rsc  simple-procedure.rsc  sum-memory.rsc
examples/instruction-tests/: allocpar1.rsc  allocpar2.rsc  allocpar3.rsc  arith1.rsc  arith10.rsc  arith11.rsc  arith13.rsc  arith14.rsc  arith15.rsc  arith16.rsc  arith17.rsc  arith18.rsc  arith19.rsc  arith2.rsc  arith20.rsc  arith21.rsc  arith22.rsc  arith23.rsc  arith24.rsc  arith25.rsc  arith26.rsc  arith27.rsc  arith28.rsc  arith29.rsc  arith3.rsc  arith30.rsc  arith31.rsc  arith32.rsc  arith33.rsc  arith34.rsc  arith35.rsc  arith36.rsc  arith37.rsc  arith38.rsc  arith39.rsc  arith4.rsc  arith40.rsc  arith5.rsc  arith6.rsc  arith7.rsc  (+65 more)
source/: .gitignore  CMakeLists.txt  main.cpp
source/src/assembler/: Assembler.cpp  Assembler.h  Eval.cpp  Memory.cpp  Symbols.cpp  Translation.cpp  assembler.cpp  assembler.h  eval.cpp  memory.cpp  symbols.cpp  translation.cpp
source/src/debug/: debug_commands.cpp  debugger.cpp  debugger.h
source/src/entropy/: entropy.cpp  entropy.h
source/src/machine/: Machine.cpp  Machine.h  machine.cpp  machine.h
source/src/messages/: error.h
source/src/scannergen/: main.cpp
source/src/syntax/: Instructions.cpp  Instructions.h  Syntax.cpp  Syntax.h  csyntax.c  csyntax.h  instructions.cpp  instructions.h  parser.y  scanner.flex  scanner.h  syntax.cpp
